--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,11 @@ jwt.expiration=604800000
 server.port=8083
 other.service.url=http://143.244.199.239/auth/userDetails
 
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.configUrl=/submithelp/v3/api-docs/swagger-config
+# Base path for the generated OpenAPI documentation
+springdoc.api-docs.path=/submithelp/v3/api-docs
+
+# Public URL path where Swagger UI will be available
+spring.mvc.static-path-pattern=/submithelp/**
 
 
 spring.datasource.hikari.connection-timeout=30000
