--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,7 @@ jwt.expiration=604800000
 server.port=8083
 other.service.url=http://143.244.199.239/auth/userDetails
 
-# Base path for the generated OpenAPI documentation
-springdoc.api-docs.path=/assistancerequest/v3/api-docs
-
-# Public URL path where Swagger UI will be available
-spring.mvc.static-path-pattern=/assistancerequest/**
+springdoc.swagger-ui.url=/submithelp/v3/api-docs
 
 
 spring.datasource.hikari.connection-timeout=30000
