--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ server.port=8083
 other.service.url=http://143.244.199.239/auth/userDetails
 
 springdoc.swagger-ui.configUrl=/assistancerequest/v3/api-docs
+springdoc.swagger-ui.url=/assistancerequest/v3/api-docs
 springdoc.swagger-ui.disable-swagger-default-url=true
 
 spring.datasource.hikari.connection-timeout=30000
